# jobjob

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json
.doctrees/: environment.pickle  index.doctree
.doctrees/guide/: configuration.doctree  credentials.doctree  free-option.doctree  github-repo.doctree  google-project.doctree  index.doctree  install.doctree  prerequisites.doctree  profiles.doctree  usage-applications.doctree  usage-enrichment.doctree
.doctrees/restapi/: index.doctree
.github/workflows/: ci.yml  docs.yaml  docs2.yaml  format.yaml  release.yml
_modules/: index.html
_modules/jobjob/: config.html
_modules/jobjob/apply/: workflow.html
_modules/jobjob/loader/: loadcontent.html  location.html  profiles.html  skeleton.html
_modules/jobjob/structure/: highlight.html  skill.html  template.html
_sources/guide/: configuration.rst.txt  install.rst.txt  profiles.rst.txt  usage-applications.rst.txt
config/: .env.template
docs/: Makefile  api.rst  architecture.md  conf.py  credentials-setup.md  developer.md  index.rst  install-accounts.md  install-free-option.md  install-google-project.md  install-software.md  make.bat  profiles.md  quickstart-draft.md  quickstart.md  requirements.txt  setup-local-config.md  setup-wizard.md  setup.md  usage-applications.md  usage-enrichment.md  usage.md
docs/guide/: configuration.rst  credentials.rst  free-option.rst  github-repo.rst  google-project.rst  index.rst  prerequisites.rst  profiles.rst  usage-applications.rst  usage-enrichment.rst
docs/restapi/: index.rst
docs/source/: architecture.md  conf.py  configuration.md  credentials-setup.md  getting-started.md  index.rst  install-accounts.md  install-free-option.md  install-google-project.md  install-software.md  profiles.md  setup-local-config.md  setup-wizard.md  usage-applications.md  usage-enrichment.md  usage.md
docs2/: conf.py
guide/: configuration.html  credentials.html  free-option.html  github-repo.html  google-project.html  index.html  install.html  prerequisites.html  profiles.html  usage-applications.html  usage-enrichment.html
jobjob/: __main__.py  cli.py  config.py  launcher.py
jobjob/ailib/: cachemanager.py  extract.py  processresponse.py  query.py  session.py
jobjob/ailib/client/: anthropic.py  base.py
jobjob/apply/: __main__.py  recheck.py  workflow.py
jobjob/apply/generate/: archetype.py  ats.py  ats_checks.py  coverletter.py  highlights.py  parse.py  readme.py  resume.py  skills.py
jobjob/apply/output/: cover_letter_docx.py  cover_letter_pdf.py  readme_docx.py
jobjob/auth/: __init__.py  __main__.py
jobjob/autofill/: __init__.py  __main__.py  data.py  report.py  runner.py
jobjob/autofill/adapters/: __init__.py  _common.py  ashby.py  base.py  generic.py  greenhouse.py  lever.py  smartrecruiters.py  workable.py  workday.py
jobjob/classify/: __init__.py  classify.py
jobjob/data/: NOTICE-ESCO.md  skill_cloud.toml
jobjob/enrich/: __main__.py  parse.py  workflow.py
jobjob/gapi/: docs.py  drive.py  service.py  sheets.py
jobjob/ingest/: __init__.py  jd_source.py  resume_import.py  save.py
jobjob/loader/: auth.py  loadcontent.py  loadprompt.py  loadreference.py  loadstatic.py  location.py  profiles.py  prompt_catalog.py  skeleton.py
jobjob/migrate/: __init__.py  _env_keys.py  _profile_layout.py
jobjob/prompts/: cover_letter.txt  job_description.txt  job_description_explicit.txt  linkedin_profile.txt  resume_import.txt  resume_objective.txt  skills_analysis.txt
jobjob/skills/: suggest.py
jobjob/storage/: __init__.py  base.py  drive.py  local.py
jobjob/structure/: applicant.py  build.py  dedup.py  experience.py  fit.py  highlight.py  job_decription.py  normalize.py  profile.py  reference.py  skill.py  skillcloud.py  template.py  token_usage.py
openspec/changes/application-identity/: design.md  proposal.md  tasks.md
openspec/changes/ats-assessment/: proposal.md  tasks.md
openspec/changes/ats-calibration/: proposal.md
openspec/changes/ats-standalone-check/: proposal.md
openspec/changes/autofill-apply-wiring/: proposal.md  tasks.md
openspec/changes/full-build-rename/: proposal.md  tasks.md
openspec/changes/live-building-state/: proposal.md  tasks.md
openspec/changes/model-scoped-cache/: proposal.md  tasks.md
openspec/changes/provider-agnostic-generation/: proposal.md
openspec/changes/quantitative-fit-scoring/: design.md  tasks.md
openspec/changes/skill-cloud/: proposal.md
openspec/notes/: README.md  build-requirements-and-decisions.md
openspec/notes/original/: req-design.md  req-frontend.md  req-refactor.md
openspec/specs/application-identity/: spec.md
openspec/specs/application-insights/: spec.md
openspec/specs/ats-assessment/: spec.md
openspec/specs/ats-standalone-check/: spec.md
openspec/specs/autofill-apply/: spec.md
openspec/specs/cache-atomic-writes/: spec.md
openspec/specs/honesty-and-voice/: spec.md
restapi/: index.html
scripts/: curate_skill_cloud.py  curate_skill_cloud.toml
static/config/: .profile
static/content/: templates.toml
tests/: __init__.py
tests/fixtures/: __init__.py  ashby_application.html  generic_application.html  greenhouse_application.html  jd_js_rendered.html  lever_application.html  smartrecruiters_application.html  workable_application.html  workday_application.html
tests/jobjob/: test_cli.py  test_config.py  test_launcher.py  test_main.py
tests/webapp/: conftest.py  test_application_metadata.py  test_config_profiles.py  test_profile_service.py  test_profiles_router.py  test_queue_delete.py  test_rerun_jd.py  test_resume_import_router.py  test_setup.py  test_static_content_guard.py  test_static_content_router.py  test_tracking_router.py  test_update_service.py
webapp/: .gitignore  README.md
webapp/backend/: budget.py  main.py  requirements.txt  security.py
webapp/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+224 files in other folders)
